# X-TCAS

./: .gitignore  CMakeLists.txt  INTEGRATION.md  Makefile  README.md  SL.c  X-TCAS.cfg  build_release  geom.c  helpers.h  math.c  math.h  types.h  xplane.c  xtcas.c  xtcas.h
SDK/FF_A320/: TCAS_obj_intf.txt
cmdfiles/: RA_prev.cmds  slow_closure.cmds  straight_5000.cmds  turn_in.cmds  two_intr.cmds
gts820/: 10clk.aup  10nm.aup  11clk.aup  12clk.aup  1clk.aup  1nm.aup  2clk.aup  2nm.aup  3clk.aup  3nm.aup  4clk.aup  4nm.aup  5clk.aup  5nm.aup  6clk.aup  6nm.aup  7clk.aup  7nm.aup  8clk.aup  8nm.aup  9clk.aup  9nm.aup  alt_not_avail.aup  cockpit_speaker  high.aup  low.aup  m1nm.aup  p10nm.aup  same_alt.aup  tas.aup  tfc.aup
gts820/10clk_data/e00/d00/: e0000440.au
gts820/10nm_data/e00/d00/: e0000cc1.au
gts820/11clk_data/e00/d00/: e0000954.au
gts820/12clk_data/e00/d00/: e000067e.au
gts820/1clk_data/e00/d00/: e0000dc1.au
gts820/1nm_data/e00/d00/: e0000739.au
gts820/2clk_data/e00/d00/: e0000d5f.au
gts820/2nm_data/e00/d00/: e0000fa1.au
gts820/3clk_data/e00/d00/: e0000340.au
gts820/3nm_data/e00/d00/: e0000bda.au
gts820/4clk_data/e00/d00/: e0000c44.au
gts820/4nm_data/e00/d00/: e0000de6.au
gts820/5clk_data/e00/d00/: e0000454.au
gts820/5nm_data/e00/d00/: e0000300.au
gts820/6clk_data/e00/d00/: e0000d09.au
gts820/6nm_data/e00/d00/: e0000a09.au
gts820/7clk_data/e00/d00/: e0000fac.au
gts820/7nm_data/e00/d00/: e0000eac.au
gts820/8clk_data/e00/d00/: e00008b4.au
gts820/8nm_data/e00/d00/: e000005a.au
gts820/9clk_data/e00/d00/: e00000fb.au
gts820/9nm_data/e00/d00/: e0000b73.au
gts820/alt_not_avail_data/e00/d00/: e0000054.au
gts820/high_data/e00/d00/: e000087d.au
gts820/low_data/e00/d00/: e0000c6e.au
gts820/m1nm_data/e00/d00/: e0000e62.au
gts820/p10nm_data/e00/d00/: e0000aeb.au
gts820/same_alt_data/e00/d00/: e0000af8.au
gts820/tas_data/e00/d00/: e00000cc.au  e000012a.au  e0000335.au  e0000646.au  e0000964.au  e0000a6f.au  e0000bdd.au  e0000c28.au  e0000d71.au  e0000dda.au
gts820/tfc_data/e00/d00/: e0000db1.au
qmake/: .gitignore  build-mac  build-win-lin  qmake.pro
src/: CMakeLists.txt  SL.c  SL.h  assert.h  avl.c  avl.h  dbg_log.c  dbg_log.h  ff_a320_intf.c  ff_a320_intf.h  generic_intf.c  geom.c  geom.h  helpers.c  helpers.h  htbl.c  htbl.h  log.c  log.h  pos.c  pos.h  sim_intf.h  snd_sys.c  snd_sys.h  test.c  test.h  thread.c  thread.h  time.c  time.h  types.h  vsi.c  vsi.h  wav.c  xplane.c  xplane.h  xplane_test.c  xplane_test.h  xtcas.c  xtcas.h
xtcas/: generic_intf.h
